==> bugobliterator/ChibiOS-1/os/hal/ports/KINETIS_MCUXPresso/MK66F18/hal_serial_lld.c <==
#include "hal.h"

static void set_error(SerialDriver *sdp, uint16_t flags) {
  eventflags_t sts = 0;
  if (flags & (kLPUART_RxOverrunFlag))
    sts |= SD_OVERRUN_ERROR;
  if (flags & (kLPUART_ParityErrorFlag))
    sts |= SD_PARITY_ERROR;
  if (flags & (kLPUART_FramingErrorFlag))
    sts |= SD_FRAMING_ERROR;
  if (flags & (kLPUART_NoiseErrorFlag))
    sts |= SD_NOISE_ERROR;
  chnAddFlagsI(sdp, sts);
}

void sd_lld_init(void) {
#if KINETIS_SERIAL_USE_LPUART0 == TRUE
  sdObjectInit(&LPSD1, NULL, notify1);
  LPSD1.is_lp = true;
  LPSD1.uart = LPUART0;
#endif
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config) {
  static SerialConfig default_config;
  if (config == NULL) {
    if (sdp->is_lp) {
      LPUART_GetDefaultConfig(&default_config.lpuart_config);
    } else {
      UART_GetDefaultConfig(&default_config.uart_config);
    }
    config = &default_config;
  }
  sdp->config = config;

  if (sdp->state == SD_STOP) {
#if KINETIS_SERIAL_USE_LPUART0 == TRUE
    if (&LPSD1 == sdp) {
      CLOCK_SetLpuartClock(1);
      LPUART_Init(LPUART0, &config->lpuart_config, CLOCK_GetFreq(kCLOCK_PllFllSelClk));
      nvicEnableVector(LPUART0_IRQn, KINETIS_SERIAL_LPUART0_PRIORITY);
      LPUART_EnableInterrupts(LPUART0, (kLPUART_FramingErrorInterruptEnable) | (kLPUART_ParityErrorInterruptEnable) | 
      (kLPUART_RxOverrunInterruptEnable) | (kLPUART_NoiseErrorInterruptEnable));
    }
#endif
  }
}

void sd_lld_stop(SerialDriver *sdp) {

  if (sdp->state == SD_READY) {
#if KINETIS_SERIAL_USE_LPUART0 == TRUE
    if (&LPSD1 == sdp) {
      nvicDisableVector(LPUART0_IRQn);
      LPUART_Deinit(LPUART0);
    }
#endif
  }
}
